--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,8 @@ nav ul li {
     margin-top: 20px;
 }
 
+/* first section */
+
 .section {
     display: flex;
     justify-content: space-between;
@@ -81,6 +83,8 @@ nav ul li {
     height: 328px;
     border-radius: 48px;
 }
+
+/* second section */
 
 .box {
     margin: 0px 200px 200px 200px;
@@ -113,4 +117,21 @@ nav ul li {
     color: #000000;
     margin-top: 0px;
     margin-bottom: 50px;
+}
+
+/* third section */
+
+.review {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px 200px 50px 200px;
+}
+
+.reviewer {
+        background-color: #FFFFFF ;
+    border-radius: 14px;
+    border: #000000;
+    border-style: initial;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
