--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,16 @@ nav ul li {
     border-style: initial;
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+/* 4th section */
+.pera {
+    font-size: 20px;
+    page break-inside: avoid;
+}
+
+.wc-big {
+    width: 840px;
+    height: 365px;
+    margin-top: 50px;
+    border-radius: 48px;
+}
