--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+
+.inter-normal {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
 .raleway-normal {
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
@@ -26,9 +33,10 @@ nav ul li {
 .logo {
     font-size: 34px;
     font-style: black;
-    font-family: initial;
+    font-family: "Inter", sans-serif;
+    width: 99;
+    height: 51;
     line-height: 150%;
-    opacity: 100%;
     color: #4E47FF;
     
 }
@@ -36,6 +44,7 @@ nav ul li {
 .button {
     background-color: #4E47FF;
     font-weight: bold;
+    font-family: "Raleway", sans-serif;
     font-size: 20px;
     color: white;
     border: none;
@@ -46,10 +55,17 @@ nav ul li {
 
 .header-content {
     text-align: center;
-    margin-top: 100px;
+    margin: 137px 152px 137px 152px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 14px;
+    padding: 40px 20px;
+    box-shadow: 0 4px 16px rgba(78, 71, 255, 0.08);
 }
 
 .header-title {
+    font-family: "Raleway", sans-serif;
     font-style: bold;
     font-size: 50px;
     color: black;
@@ -65,6 +81,7 @@ nav ul li {
 }
 
 .section-title {
+    font-family: "Raleway", sans-serif;
     font-size: 42px;
     font-weight: 517;
     color: bold;
@@ -72,7 +89,7 @@ nav ul li {
 }
 
 .section-description {
-    font-style: normal;
+    font-style: "Raleway", sans-serif;
     font-size: 24px;
     color: #1E1E1E;
     margin-top: 23px;
@@ -92,6 +109,7 @@ nav ul li {
     border-radius: 24px;
 }
 .joined {
+    font-family: "Raleway", sans-serif;
     text-align: center;
     margin-top: 50px;
     padding: 50px 0px 50px 0px;
@@ -156,16 +174,49 @@ nav ul li {
     align-items: center;    
 }
 
+.gap{
+    gap: 10px;
+}
+.email{
+    font-family: "Inter", sans-serif;
+    padding-bottom: 10;
+    font-style: medium;
+    width: 497;
+    height: 22;
+}
+
+.gettouch {
+    background: #f5f7fe;
+    border-radius: 12px;
+    padding: 20px 32px;
+    box-shadow: 0 0 0 1px #9fa2aa;
+    align-items: center;
+    width: 497;
+    height: 70;
+    
+}
+
+
+.massage-box{
+        background: #f5f7fe;
+    border-radius: 12px;
+    padding: 20px 32px;
+    box-shadow: 0 0 0 1px #9fa2aa;
+    align-items: center;
+    width: 497;
+    height: 135;
+
+}
+
 .let{
     font-size: 97;
     font-style: bold;
-    width: 528;
+    widt#151516
     height: 232;
 }
 
 main input[type="text"], main textarea {
-    width: 497px;
-    height: 70px;
+    width: 497rgba(24, 24, 26, 0.12)
     gap: 10px;
     border-radius: 10px;
     color: #131212;
@@ -177,3 +228,37 @@ main input[type="text"], main textarea {
 
 /* fotter */
 
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.footer-logo {
+    font-size: 100;
+    font-style: bold;
+    width: 291;
+    height: 121;
+    font-family: "Raleway", sans-serif;
+}
+.footer-class {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 0px;
+    font-size: 22px;
+    color: #8987A1;
+    font-family: "Raleway", sans-serif;
+    font-weight: 400;
+    list-style: none;
+    
+}
+.footer-contain{
+    text-decoration: none;
+}
+
+.textdec {
+    text-decoration: none;
+}
